@@ -3,6 +3,8 @@ BACKGROUND images/background1_950x625_197.jpg
 HTMLSTYLE overlib
 HTMLOUTPUTFILE weathermap.html
 
+SET rrd_default_path /var/www/cacti/rra
+
 FONTDEFINE 10 Vera.ttf 8
 FONTDEFINE 20 VeraIt.ttf 8
 FONTDEFINE 30 VeraIt.ttf 18
@@ -76,7 +78,10 @@ NODE server
     LABELOFFSET W
     LABELANGLE 90
     LABEL {node:this:name}
-    
+
+NODE bigrouter
+    TEMPLATE router
+    LABEL BIG {node:this:name}
 
 # Node definitions:
 NODE node20108
@@ -93,7 +98,7 @@ NODE node20108
 
 NODE node80111
 	# LABEL RoundNODEred
-        TEMPLATE router
+        TEMPLATE bigrouter
 	POSITION 902 408
 	
 
