@@ -330,7 +330,17 @@ class WeatherMapDataSource_rrd extends WeatherMapDataSource {
 		}
 
 		debug("SCALING result by $multiplier\n");
-				
+		
+		// try and make a complete path, if we've been given a clue
+		if(!preg_match("/^(\/|\.)",$rrdfile))
+		{
+			$rrdbase = $map->get_hint('rrd_default_path');
+			if($rrdbase != '')
+			{
+				$rrdfile = $rrdbase."/".$rrdfile;
+			}
+		}
+		
 		$period = intval($map->get_hint('rrd_period'));
 		if($period == 0) $period = 800;
 		$start = $map->get_hint('rrd_start');
